<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.develiark.android_park.MainActivity">


    <Button
        android:text="@string/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update_yes"
        android:layout_above="@+id/btn_update_no"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_category"
        android:layout_above="@+id/btn_update_yes"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update_no"
        android:layout_alignParentBottom="true" />

    <TextView
        android:text="@string/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorHead"
        android:id="@+id/text_title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp" />

    <TextView
        android:text="@string/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/text_date" />

    <TextView
        android:text="@string/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_title"
        android:layout_marginTop="25dp"
        android:id="@+id/text_body"
        android:textColor="@color/colorHead"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
